# ai-predictive-maintenance-agent

./: .env.example  .gitignore  Dockerfile  PredictiveAI_Architecture_Report.html  RAILWAY_DEPLOYMENT.md  README.md  create-backend.sh  create-project.sh  dashboard.py  docker-compose.yml  generate_report.py  predictive_maintenance.db  pyproject.toml  pyrightconfig.json  railway.toml  simulate_sensors.py  start.sh  stop.sh
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml
agent/: Dockerfile  actions.py  alert_manager.py  anomaly_detector.py  config.py  docker-compose.yml  ingestion.py  main.py  requirements.txt  streaming.py  webhook.py
backend/: alembic.ini  docker-compose.yml  predictive_maintenance.db  requirements.txt  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 98969585789d_initial_schema.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/tests/: test_integration.py
data/: sample_sensor_data.csv
predictive-maintenance-frontend/: .env.example  .eslintrc.js  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
predictive-maintenance-frontend/public/: config.js
predictive-maintenance-frontend/src/: main.tsx
simulation-server/: Dockerfile  generate-history.js  package-lock.json  package.json  server.js
simulation-server/public/: index.html
src/predictive_maintenance/: __init__.py  api.py  data_loader.py  drift.py  logging_utils.py  model.py  service.py
tests/: test_api.py  test_data_loader.py
(+192 files in other folders)
