[tool.poetry]
name = "ai-predictive-maintenance-agent"
version = "0.1.0"
description = "Predictive maintenance API and dashboard"
authors = ["Maintainers <maintainers@example.com>"]
readme = "README.md"
packages = [{ include = "predictive_maintenance", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.116.1"
uvicorn = {version = "^0.35.0", extras = ["standard"]}
pandas = "^2.3.1"
pyarrow = "^21.0.0"
numpy = "^2.3.2"
scikit-learn = "^1.7.1"
xgboost = "^3.0.4"
joblib = "^1.5.1"
streamlit = "^1.48.0"
requests = "^2.32.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
httpx = "^0.28.1"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.pyright]
extraPaths = ["./backend", "./backend/venv/lib/python3.9/site-packages"]
venvPath = "./backend"
venv = "venv"
pythonVersion = "3.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
